--- a/Portfolio/contact.html
+++ b/Portfolio/contact.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <!--
     Rachel Sabotta
-    template.html
+    contact.html
     02/02/2025
 -->
 <html lang="en">
     <head>
-        <title>RS Designs Portfolio</title>
+        <title>RS Designs Portfolio - Contact</title>
         <meta charset="utf-8">
     </head>
     <body>
@@ -27,7 +27,13 @@
         </nav>
         <!-- Insert the main content down below in the main section-->
         <main>
-
+            <div id="contact">
+                <h2>Ready to Collaborate?</h2>
+                <p>Email: <a href="mailto:rsabotta0131605@students.point.edu">rsabotta0131605@students.point.edu</a></p>
+                <p>Phone: <a href="tel:8155089546">815-508-9546</a></p>
+                <p>Location: Point University (507 W 10th St, West Point, GA 31833)</p>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3350.7221859874026!2d-85.18748022468763!3d32.87906917362106!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88f51d7753642ef9%3A0x53f12ddd7af6e9e6!2sPoint%20University!5e0!3m2!1sen!2sus!4v1738864608184!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </div>
         </main>
 
         <footer>
