--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -6,21 +6,24 @@
 -->
 <html lang="en">
     <head>
-        <title>RS Designs Portfolio</title>
+        <title>RS Designs Portfolio - Home</title>
         <meta charset="utf-8">
     </head>
     <body>
         <header>
             <h1>RS Designs</h1>
             <h3>Clear &#9675; Concise &#9675; Creative.</h3>
+            <img src="images/rachel-headshot.jpg" alt="Rachel smiling in professional headshot" height="500" width="500">
         </header>
 
         <nav>
-            <p>Home &nbsp; &nbsp;
-            About Me &nbsp; &nbsp;
-            My Work &nbsp; &nbsp;
-            FAQ &nbsp; &nbsp;
-            Contact</p>
+            <p>
+                <a href="index.html">Home</a> &nbsp; &nbsp;
+                <a href="about.html">About Me</a> &nbsp; &nbsp;
+                <a href="work.html">My Work</a> &nbsp; &nbsp;
+                <a href="faq.html">FAQ</a> &nbsp; &nbsp;
+                <a href="contact.html">Contact</a>
+            </p>
         </nav>
         <!-- Insert the main content down below in the main section-->
         <main>
@@ -37,6 +40,7 @@
         </main>
 
         <footer>
+            <p>Email me! <a href="mailto:rsabotta0131605@students.point.edu">rsabotta0131605@students.point.edu</a></p>
             <p>&copy; Copyright 2025 RS Designs. All Rights Reserved.</p>
         </footer>
     </body>
