--- a/Portfolio/contact.html
+++ b/Portfolio/contact.html
@@ -8,22 +8,25 @@
     <head>
         <title>RS Designs Portfolio - Contact</title>
         <meta charset="utf-8">
+        <link rel="stylesheet" href="css/styles.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&display=swap" rel="stylesheet">
     </head>
     <body>
         <header>
             <h1>RS Designs</h1>
             <h3>Clear &#9675; Concise &#9675; Creative.</h3>
-            <img src="images/rachel-headshot.jpg" alt="Rachel smiling in professional headshot" height="500" width="500">
         </header>
 
         <nav>
-            <p>
-                <a href="index.html">Home</a> &nbsp; &nbsp;
-                <a href="about.html">About Me</a> &nbsp; &nbsp;
-                <a href="work.html">My Work</a> &nbsp; &nbsp;
-                <a href="faq.html">FAQ</a> &nbsp; &nbsp;
-                <a href="contact.html">Contact</a>
-            </p>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About Me</a></li>
+                <li><a href="work.html">My Work</a></li>
+                <li><a href="faq.html">FAQ</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
         </nav>
         <!-- Insert the main content down below in the main section-->
         <main>
