--- a/Portfolio/about.html
+++ b/Portfolio/about.html
@@ -23,7 +23,7 @@
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About Me</a></li>
-                <li><a href="work.html">My Work</a></li>
+                <li><a href="mywork.html">My Work</a></li>
                 <li><a href="faq.html">FAQ</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
@@ -31,7 +31,10 @@
         <!-- Insert the main content down below in the main section-->
         <main>
             <div id="about">
-                <img src="images/rachel-headshot.jpg" alt="image of Rachel smiling in professional headshot" class="headshot">
+                <figure>
+                    <img src="images/rachel-headshot.jpg" alt="image of Rachel smiling in professional headshot" class="headshot">
+                    <figcaption>web & graphic designer</figcaption>
+                </figure>
                 <h2>My Education</h2>
                     <dl>
                         <dt>Butler University</dt>
