--- a/Portfolio/contact.html
+++ b/Portfolio/contact.html
@@ -23,7 +23,7 @@
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About Me</a></li>
-                <li><a href="work.html">My Work</a></li>
+                <li><a href="mywork.html">My Work</a></li>
                 <li><a href="faq.html">FAQ</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
