--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&display=swap" rel="stylesheet"> 
         <meta name="description" content="RS Designs, a solo digital content creator, is the solution to all of our web design, social media, and graphic design dreams. Her dedication to the world of media has made her an experienced and diligent individual. ">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     </head>
     <body>
         <div id="green-stripe">
