--- a/faq.html
+++ b/faq.html
@@ -14,6 +14,7 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&display=swap" rel="stylesheet">
         <meta name="description" content="Looking for digital content help, but don't know where to start? Learn a little bit more about RS Designs, and reach out for a 1:1 talk about media!">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     </head>
     <body>
         <div id="green-stripe">
