--- a/mywork.html
+++ b/mywork.html
@@ -14,7 +14,7 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&display=swap" rel="stylesheet">
         <meta name="description" content="Take a look at some of the various pieces of media, ranging from class projects, internship work, and freelancing!">
-
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     </head>
     <body>
         <div id="green-stripe">
