--- a/faq.html
+++ b/faq.html
@@ -49,7 +49,7 @@
                         <dt>Where are you located?</dt>
                             <dd>I am located in Indianapolis, IN, but I offer my services anywhere in the US! Since this content lives online, our communication and meetings can as well. For all clients that are close to the Indidnapolis area, I would love to sit down with a cup of coffee and discuss your hopes and dreams with my creative service.</dd>    
                         <dt>How can I contact you?</dt>
-                            <dd>You can fill out the form on the Contact page, and I will reach out to you! Otherwise, you can email at sabottarachel@gmail.com, or call me at 815-508-9546.</dd>
+                            <dd>You can fill out the form on the Contact page, and I will reach out to you! Otherwise, you can email at sabottarachel@gmail.com.</dd>
                     </dl>
                 </div>                 
         </main>
