--- a/index.html
+++ b/index.html
@@ -50,6 +50,8 @@
                     <p>Explore my portfolio, featuring a curated collection of web and graphic design projects such as informational flyers, branding, logo creation, and more.</p>
 
                     <p>I’m a designer with a passion for tools in the Adobe Suite, turning your ideas into clear, concise, creative designs.<p>
+                    <br><br>
+                    <p>This portfolio website was created from the ground up using HTML and CSS on Visual Studio Code. The files were uploaded to a Github repository, where the site lives now. As I am continuing to expand my knowledge, this website is a work in progress! I understand that there is always room for improvement.</p>
                 </div>
             </div>
 
