--- a/contact.html
+++ b/contact.html
@@ -40,7 +40,7 @@
                 <center><h2>Ready to Collaborate?</h2></center>
                 <div id="contact-container">
                     <div id="form-contact-column">
-                        <form>
+                        <form action="mailto:sabottarachel@gmail.com" method="POST" enctype="text/plain">
                             <fieldset>
                                 <legend>Personal Information</legend>
                                 <label for="fName">First Name</label>
