--- a/contact.html
+++ b/contact.html
@@ -38,7 +38,7 @@
         <main>
             <div id="contact">
                 <center><h2>Ready to Collaborate?</h2></center>
-                <div id="contact-container">
+                <!-- <div id="contact-container">
                     <div id="form-contact-column">
                         <form action="mailto:sabottarachel@gmail.com" method="POST" enctype="text/plain">
                             <fieldset>
@@ -58,13 +58,14 @@
                                 <center><input type="submit" id="submit" value="Submit" class="btn"></center>
                             </fieldset>
                         </form>
-                    </div>
+                    </div> -->
                     
                     <div id="text-contact-column">
                         <p>Email: <a href="mailto:sabottarachel@gmail.com">sabottarachel@gmail.com</a></p>
                         <p>Location: Butler University (4600 Sunset Ave, Indianapolis, IN 46208)</p>
                         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3063.5315891178698!2d-86.17518238783413!3d39.83991859042453!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x886b53fa88a5c3af%3A0x3c5d32ecb2d453e!2sButler%20University!5e0!3m2!1sen!2sus!4v1741534406949!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                     </div>
+                </div>
             </div>
         </main>
 
