--- a/contact.html
+++ b/contact.html
@@ -37,7 +37,7 @@
         <!-- Insert the main content down below in the main section-->
         <main>
             <div id="contact">
-                <center><h2>Ready to Collaborate?</h2></center>
+                <center><h2>Lets Start Collaborating.</h2></center>
                 <!-- <div id="contact-container">
                     <div id="form-contact-column">
                         <form action="mailto:sabottarachel@gmail.com" method="POST" enctype="text/plain">
