--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             
             <div class="social-column">
                 <h4>Stay connected!</h4>
-                    <a href="https://www.linkedin.com" target="_blank" class="image-hover-link">
+                    <a href="https://www.linkedin.com/in/rachel-sabotta-764b9b251/" target="_blank" class="image-hover-link">
                         <img src="images/linkedin-pink.png" alt="image of pink linkedin logo" class="image-default">
                         <img src="images/linkedin-blue.png" alt="image of blue linkedin logo" class="image-hover">
                     </a>  
