--- a/contact.html
+++ b/contact.html
@@ -34,10 +34,14 @@
             <h1 class="rs-designs">RS Designs</h1>
             <h3 class="ccc">Clear &#9675; Concise &#9675; Creative.</h3>
         </header>
-        <!-- Insert the main content down below in the main section-->
+
         <main>
             <div id="contact">
                 <center><h2>Lets Start Collaborating.</h2></center>
+                        <center><p>Email: <a href="mailto:sabottarachel@gmail.com">sabottarachel@gmail.com</a></p></center>
+                        <center><p>Location: Butler University (4600 Sunset Ave, Indianapolis, IN 46208)</p></center>
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3063.5315891178698!2d-86.17518238783413!3d39.83991859042453!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x886b53fa88a5c3af%3A0x3c5d32ecb2d453e!2sButler%20University!5e0!3m2!1sen!2sus!4v1741534406949!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                </div>
                 <!-- <div id="contact-container">
                     <div id="form-contact-column">
                         <form action="mailto:sabottarachel@gmail.com" method="POST" enctype="text/plain">
@@ -61,11 +65,7 @@
                     </div> -->
                     
                     <!-- <div id="text-contact-column"> -->
-                        <p>Email: <a href="mailto:sabottarachel@gmail.com">sabottarachel@gmail.com</a></p>
-                        <p>Location: Butler University (4600 Sunset Ave, Indianapolis, IN 46208)</p>
-                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3063.5315891178698!2d-86.17518238783413!3d39.83991859042453!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x886b53fa88a5c3af%3A0x3c5d32ecb2d453e!2sButler%20University!5e0!3m2!1sen!2sus!4v1741534406949!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-                </div>
-            </div>
+
         </main>
 
         <footer>
