--- a/contact.html
+++ b/contact.html
@@ -72,7 +72,7 @@
             <div class="collab-container">
                 <div class="collab-column">
                     <h2 id="collab">Ready to Collaborate?</h2>
-                    <p>Email me! <a href="mailto:rsabotta0131605@students.point.edu">sabottarachel@gmail.com</a></p>
+                    <p>Email me! <a href="mailto:sabottarachel@gmail.com">sabottarachel@gmail.com</a></p>
                 </div>
                 
                 <div class="social-column">
