--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <main>
             <div class="container">
                 <div class="img-column">
-                    <img src="images/full-pic.jpg" alt="rachel standing wiht arms out at side under an arch lined with string lights" id="homeimg">
+                    <img src="images/full-pic.jpg" alt="rachel standing with arms out at side under an arch lined with string lights" id="homeimg">
                 </div>
 
                 <div class="text-column">
