--- a/mywork.html
+++ b/mywork.html
@@ -39,7 +39,7 @@
             <center>
                 <h2>Take a look at some of my work!</h2>
                 <p>Various pieces of media from class projects, internship work, and freelancing!</p>
-                <p>Click <a href="https://acrobat.adobe.com/id/urn:aaid:sc:VA6C2:e2545555-2043-4c20-baed-1bfc53de1bd3">here</a> if you would rather look at my resume directly!</p>
+                <p>Click <a href="https://acrobat.adobe.com/id/urn:aaid:sc:VA6C2:e2545555-2043-4c20-baed-1bfc53de1bd3" id="resume-link">here</a> if you would rather look at my resume directly!</p>
             </center>        
                     <h4>Social Media for Abrams EyeCare</h4>
                     <p>Abrams EyeCare has launched an exciting new social media campaign that aims to engage and educate their followers.</p>
