--- a/faq.html
+++ b/faq.html
@@ -25,6 +25,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About Me</a></li>
                 <li><a href="mywork.html">My Work</a></li>
+                <li><a href="faq.html">FAQ</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
@@ -62,7 +63,12 @@
                 
                 <div class="social-column">
                     <h4>Stay connected!</h4>
-                        <a href="https://www.linkedin.com/in/rachel-sabotta-764b9b251/" target="_blank" class="image-hover-link">
+                        <a href="https://www.facebook.com" target="_blank" class="image-hover-link">
+                            <img src="images/facebook-pink.png" alt="image of pink facebook logo" class="image-default">
+                            <img src="images/facebook-blue.png" alt="image of blue facebook logo" class="image-hover">
+                        </a>
+                        
+                        <a href="https://www.linkedin.com" target="_blank" class="image-hover-link">
                             <img src="images/linkedin-pink.png" alt="image of pink linkedin logo" class="image-default">
                             <img src="images/linkedin-blue.png" alt="image of blue linkedin logo" class="image-hover">
                         </a>  
