--- a/index.html
+++ b/index.html
@@ -69,10 +69,10 @@
             
             <div class="social-column">
                 <h4>Stay connected!</h4>
-                    <a href="https://www.linkedin.com/in/rachel-sabotta-764b9b251/" target="_blank" class="image-hover-link">
+                    <center><a href="https://www.linkedin.com/in/rachel-sabotta-764b9b251/" target="_blank" class="image-hover-link">
                         <img src="images/linkedin-pink.png" alt="image of pink linkedin logo" class="image-default">
                         <img src="images/linkedin-blue.png" alt="image of blue linkedin logo" class="image-hover">
-                    </a>  
+                    </a></center>  
             </div>
         </div>
             <p id="copyright">&copy; Copyright 2025 RS Designs. All Rights Reserved.</p>
