--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <div class="text-column">
                     <h2>Hello!</h2>
 
-                    <h4>I am an aspiring web developer and designer looking to expand my knowledge and become a part of a passionate design team.</h4>
+                    <h4>I am an aspiring web and graphic designer looking to expand my knowledge and become a part of a passionate design team.</h4>
 
                     <p>Explore my portfolio, featuring a curated collection of web and graphic design projects such as informational flyers, branding, logo creation, and more.</p>
 
