--- a/mywork.html
+++ b/mywork.html
@@ -127,6 +127,7 @@
                         <div class="button-column-work">
                             <img src="bubble brew business card2">
                         </div>
+                    </div>
                     
                     <h4>Greenwood Pride Sponsorship Kit</h4>
                     <p>In the fall semester of 2024, I was the Creative Manager for the Greenwood Pride client team in Butler University's strategic communications agency, five fountains. I worked with the three other members of my group, and we put together some amazing work. Greenwood Pride is a nonprofit in Greenwood, Indiana, that asked us to create a sponsorship kit for their pride festival this summer. Along the way, we created a style guide, choosing colors and fonts, since we were only provided with logos. After completing the sponsorship kit and style guide, they asked us to put together an informational pamphlet, explaining that Greenwood Pride is "more than just a festival."</p>
