--- a/mywork.html
+++ b/mywork.html
@@ -121,11 +121,11 @@
                     <p>My friend thought of the logo concept, and I helped her narrow down the color scheme. I drew this logo in Procreate, exported it into Adobe Illustrator, and created a business card in Adobe InDesign.</p>
                     <div class="button-container-work">
                         <div class="button-column-work">
-                            <img src="bubble brew business card">
+                            <img src="bubble brew business card.jpg" alt="graphic of a light green business card with Bubble Brew logo in the middle of a white rectangle and light green leaf outlines in background">
                         </div>
 
                         <div class="button-column-work">
-                            <img src="bubble brew business card2">
+                            <img src="bubble brew business card2.jpg" alt="graphic of a light green business card with contact information and the slogan Brew Bold. Stay Bubbly.">
                         </div>
                     </div>
                     
